@startuml
skinparam classAttributeIconSize 0

class VeiculoDB {
  +List<Veiculo> getScooterList()
  +boolean removeVeiculo(int id)
}

class VeiculoController {
    +List<Veiculo> getScooterList()
    +boolean removeVeiculo(int id)
}

class AdminUI {
}


AdminUI ..> VeiculoController 

VeiculoController ..> VeiculoDB
@enduml

